убрал все, что должно быть в cmd в cmd. и удалил helloworld
