# backend/docs/swagger.json
@@ -152,27 +152,6 @@
                 }
             }
         },
-        "/helloworld": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "helloworld"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/products/": {
             "get": {
                 "consumes": [
